tdf#113428: Fix glyph positions in PDF export

Not sure what is going on, but PDF export is the only place we call
GetNextGlyphs() with nLen > 1 and it seems I broke something here in
b894104a0b02a9b074c76feb925389d7bee6a493. Instead of trying to figure out
what the old code was trying to do, lets just calculate glyph positions
for the extra glyphs as GetNextGlyphs() does for the first one, making
PDF export closer to how the rendering on screen works.

Reviewed-on: https://gerrit.libreoffice.org/44514
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Khaled Hosny <khaledhosny@eglug.org>
(cherry picked from commit fb72ec9b6222c8a18445c078c0367e7d507720af)

Change-Id: I3f516e954ccfbe38abcf6985efe3bb1f998e967f